--- a/Ejercicios-HTML/ej_noticia.html
+++ b/Ejercicios-HTML/ej_noticia.html
@@ -11,6 +11,9 @@
     <img alt="" src="imagenes/icono.png">
     <h1>Diario On-line</h1>
 </header>
+<nav>
+    <a href="ej_listas.html">Cocina</a>
+</nav>
 <section>
     <h3><b>CordoBici</b></h3>
 
