Terminado EJERCICIO-6: TABLAS II
Signed-off-by: Angelo Carlos Capello <ang_capello@outlook.com>

--- a/Ejercicios-HTML/ej_tablas.html
+++ b/Ejercicios-HTML/ej_tablas.html
@@ -16,15 +16,17 @@
 <!--Como campus party y Jaiio comparten el mismo lugar, unifique las celdas que contienen 'Buenos Aires'-->
 <body>
 <table>
+    <thead>
     <tr>
-        <td>Siglas</td>
-        <td>Congreso o Evento</td>
-        <td>Carrera</td>
-        <td>Web</td>
-        <td>Lugar</td>
-        <td>Fecha</td>
+        <th>Siglas</th>
+        <th>Congreso o Evento</th>
+        <th>Carrera</th>
+        <th>Web</th>
+        <th>Lugar</th>
+        <th>Fecha</th>
     </tr>
-
+    </thead>
+    <tbody>
     <tr>
         <td>CPAR</td>
         <td>Campus Party</td>
@@ -33,7 +35,8 @@
         <td>Buenos Aires</td>
         <td>25-abr al 28-abr</td>
     </tr>
-
+    </tbody>
+    <tbody>
     <tr>
         <td>JAIIO</td>
         <td>Jornadas Argentinas de Informática</td>
@@ -42,7 +45,8 @@
         <td>Buenos Aires</td>
         <td>3-sep al 7-sep</td>
     </tr>
-
+    </tbody>
+    <tbody>
     <tr>
         <td>WICC</td>
         <td>Workshop de Investigadores en Ciencias de la Computación</td>
@@ -51,6 +55,7 @@
         <td>Corrientes</td>
         <td>18-mar al 27-abr</td>
     </tr>
+    </tbody>
 </table>
 </body>
 </html>
