--- a/Ejercicios-HTML/ej_tablas.html
+++ b/Ejercicios-HTML/ej_tablas.html
@@ -28,8 +28,7 @@
     </thead>
     <tbody>
     <tr>
-        <td>CPAR</td>
-        <td>Campus Party</td>
+        <td colspan="2">Campus Party</td>
         <td>Computación/Sistemas</td>
         <td>http://argentina.campus-party.org/</td>
         <td>Buenos Aires</td>
