--- a/Ejercicios-HTML/ej_tablas.html
+++ b/Ejercicios-HTML/ej_tablas.html
@@ -15,6 +15,7 @@
 <!--Elimine las siglas CPAR, y 'Campus Party' debe ocupar 2 celdas-->
 <!--Como campus party y Jaiio comparten el mismo lugar, unifique las celdas que contienen 'Buenos Aires'-->
 <body>
+<!--Hola mundo-->
 <table>
     <thead>
     <tr>
