--- a/Ejercicios-HTML/ej_formulario.html
+++ b/Ejercicios-HTML/ej_formulario.html
@@ -6,7 +6,7 @@
     <style>
         form {
             display: block;
-            margin-top: 0em;
+            margin-top: 0;
         }
     </style>
 </head>
@@ -18,26 +18,55 @@
     https://www.w3schools.com/html/tryit.asp?filename=tryhtml_elem_output-->
 
 <h3>Suscribase a Nuestro Portal de Noticias! Crear una cuenta es rápido!</h3>
-Nombre:
-Apellido:
-Sexo: Masculino Femenino
-Edad:
-Email:
-Usuario:
-Password:
-Confirmar Password:
-
-Tipo de servicio: Free / Standard / Premium
-Tema:
-Política
-Negocios
-Tecnología
-Salud
-
-Agregue un comentario:
-
-Boton de Enviar
-
+<form id="formulario_suscripcion">
+    <p>
+        Nombre: <label><input name="nombre" placeholder="Nombre" type="text"></label>
+    </p>
+    <p>
+        Apellido: <label><input name="apellido" placeholder="Apellido" type="text"></label>
+    </p>
+    <p>
+        Sexo: Masculino <label><input checked name="sexo" type="radio" value="masculino"></label>
+        Femenino <label><input name="sexo" type="radio" value="femenino"></label>
+    </p>
+    <p>
+        Edad: <label><input name="edad" placeholder="Edad" type="number"></label>
+    </p>
+    <p>
+        Email: <label><input name="email" placeholder="email@dominio.com" type="email"></label>
+    </p>
+    <p>
+        Usuario: <label><input name="usuario" placeholder="Usuario" type="text"></label>
+    </p>
+    <p>
+        Password: <label><input name="password" placeholder="Ingrese su Password" type="password"></label>
+    </p>
+    <p>
+        Confirmar Password: <label><input name="confirmar_password" placeholder="Confirmar Password"
+                                          type="password"></label>
+    </p>
+    <p>
+        Tipo de servicio: Free <label><input checked name="tipo de servicio" type="checkbox" value="free"></label>
+        Standard <label><input name="tipo de servicio" type="checkbox" value="Standard"></label> /
+        Premium <label><input name="tipo de servicio" type="checkbox" value="Premium"></label>
+    </p>
+    <p>
+        Tema: <label>
+        <select>
+            <option>Política</option>
+            <option>Negocios</option>
+            <option>Tecnología</option>
+            <option>Salud</option>
+        </select>
+    </label>
+    </p>
+    <p>
+        Agregue un comentario: <label><textarea></textarea></label>
+    </p>
+    <p>
+        <button type="button">Botón de Enviar</button>
+    </p>
+</form>
 
 </body>
 </html>
