Terminado EJERCICIO-11: Accesibilidad
Signed-off-by: Angelo Carlos Capello <ang_capello@outlook.com>

--- a/Ejercicios-HTML/ej_listas.html
+++ b/Ejercicios-HTML/ej_listas.html
@@ -41,7 +41,7 @@
     <li>Pintarles el borde con dulce y pasarlos por coco rallado.</li>
 </ol>
 
-<img alt="" src="imagenes/foto_alfajores.jpg">
+<img alt="Alfajores de maicena" src="imagenes/foto_alfajores.jpg">
 
 </body>
 </html>
