--- a/Ejercicios-HTML/ej_formulario.html
+++ b/Ejercicios-HTML/ej_formulario.html
@@ -20,48 +20,61 @@
 <h3>Suscribase a Nuestro Portal de Noticias! Crear una cuenta es rápido!</h3>
 <form id="formulario_suscripcion">
     <p>
-        Nombre: <label><input name="nombre" placeholder="Nombre" type="text"></label>
+        <label for="nombre">Nombre:</label>
+        <input id="nombre" name="nombre" placeholder="Nombre" type="text">
     </p>
     <p>
-        Apellido: <label><input name="apellido" placeholder="Apellido" type="text"></label>
+        <label for="apellido">Apellido:</label>
+        <input id="apellido" name="apellido" placeholder="Apellido" type="text">
     </p>
     <p>
-        Sexo: Masculino <label><input checked name="sexo" type="radio" value="masculino"></label>
-        Femenino <label><input name="sexo" type="radio" value="femenino"></label>
+        Sexo:
+        <label for="masculino">Masculino</label>
+        <input checked id="masculino" name="sexo" type="radio" value="masculino">
+        <label for="femenino">Femenino</label>
+        <input id="femenino" name="sexo" type="radio" value="femenino">
     </p>
     <p>
-        Edad: <label><input name="edad" placeholder="Edad" type="number"></label>
+        <label for="edad">Edad:</label>
+        <input id="edad" name="edad" placeholder="Edad" type="number">
     </p>
     <p>
-        Email: <label><input name="email" placeholder="email@dominio.com" type="email"></label>
+        <label for="email">Email: </label>
+        <input id="email" name="email" placeholder="email@dominio.com" type="email">
     </p>
     <p>
-        Usuario: <label><input name="usuario" placeholder="Usuario" type="text"></label>
+        <label for="usuario">Usuario:</label>
+        <input id="usuario" name="usuario" placeholder="Usuario" type="text">
     </p>
     <p>
-        Password: <label><input name="password" placeholder="Ingrese su Password" type="password"></label>
+        <label for="password">Password:</label>
+        <input id="password" name="password" placeholder="Ingrese su Password" type="password">
     </p>
     <p>
-        Confirmar Password: <label><input name="confirmar_password" placeholder="Confirmar Password"
-                                          type="password"></label>
+        <label for="confirmarpassword">Confirmar Password: </label>
+        <input id="confirmarpassword" name="confirmar_password" placeholder="Confirmar Password" type="password">
     </p>
     <p>
-        Tipo de servicio: Free <label><input checked name="tipo de servicio" type="checkbox" value="free"></label>
-        Standard <label><input name="tipo de servicio" type="checkbox" value="Standard"></label> /
-        Premium <label><input name="tipo de servicio" type="checkbox" value="Premium"></label>
+        Tipo de servicio:
+        <label for="Free">Free </label>
+        <input checked id="Free" name="tipo de servicio" type="checkbox" value="free"> /
+        <label for="Standard">Standard </label>
+        <input id="Standard" name="tipo de servicio" type="checkbox" value="Standard"> /
+        <label for="Premium">Premium </label>
+        <input id="Premium" name="tipo de servicio" type="checkbox" value="Premium">
     </p>
     <p>
-        Tema: <label>
-        <select>
-            <option>Política</option>
-            <option>Negocios</option>
-            <option>Tecnología</option>
-            <option>Salud</option>
+        <label for="tema">Tema:</label>
+        <select id="tema" name="tema">
+            <option value="politica">Política</option>
+            <option value="negocios">Negocios</option>
+            <option value="tecnología">Tecnología</option>
+            <option value="salud">Salud</option>
         </select>
-    </label>
     </p>
     <p>
-        Agregue un comentario: <label><textarea></textarea></label>
+        <label for="comentario">Agregue un comentario: </label>
+        <textarea id="comentario" name="comentario"></textarea>
     </p>
     <p>
         <button type="button">Botón de Enviar</button>
