Terminado EJERCICIO-12: Multimedia
Signed-off-by: Angelo Carlos Capello <ang_capello@outlook.com>

--- a/Ejercicios-HTML/ej_animales.html
+++ b/Ejercicios-HTML/ej_animales.html
@@ -10,16 +10,18 @@
     <h2>Caballo</h2>
     <p>El caballo es un mamífero perteneciente a la familia de los équidos. Existen 86 razas diferentes en el mundo.
         En la familia del caballo se incluyen tres grupos de mamíferos salvajes:
+    </p>
     <ul>
         <li>cebras (originarias de África)</li>
-        <li>asnos </li>
-        <li>caballos </li>
+        <li>asnos</li>
+        <li>caballos</li>
     </ul>
-    </p>
     <p>
-        El caballo emite el siguiente sonido:
-        <!--Insertar audio de la carpeta resources-->
+        El caballo emite el siguiente
     </p>
+    <audio controls src="resources/horse.ogg"></audio>
+    <p>Tu navegador no implementa el elemento audio</p>
+
 </div>
 
 <div>
@@ -33,9 +35,10 @@
         aunque en ocasiones sí se reúnen.
     </p>
     <p>
-        En Alaska, cuando el salmón remonta el río para el desove estival, los osos pueden reunirse para pescar.
-        <!--Insertar Video de osos pescando ubicado en la carpeta de resources-->
-    </p>
+        En Alaska, cuando el salmón remonta el río para el desove estival, los osos pueden reunirse para pescar. </p>
+    <video controls src="resources/movie.mp4"></video>
+    <p>Tu navegador el elemento video</p>
+
 </div>
 <div>
     <h2>León</h2>
@@ -46,7 +49,10 @@
         Es un animal de gran tamaño, ya que un león macho puede llegar a pesar aproximadamente hasta 300 kilogramos,
         siendo de esta manera el félido vivo mas grande después de su pariente el Tigre.
     </p>
-    <!--Insertar video de youtube sobre leones-->
+    <iframe allow="accelerometer; autoplay; clipboard-write;
+            encrypted-media; gyroscope; picture-in-picture" allowfullscreen frameborder="0"
+            height="315" src="https://www.youtube-nocookie.com/embed/p5MyUBDRt3Y" title="YouTube video player"
+            width="560"></iframe>
 </div>
 </body>
 </html>
