--- a/Ejercicios-CSS/ej_columnas.html
+++ b/Ejercicios-CSS/ej_columnas.html
@@ -15,6 +15,19 @@
         body {
             font-family: Tahoma, Arial, Helvetica, sans-serif
         }
+
+        a:link, a:visited {
+            color: #1f1bff;
+        }
+
+        a:hover {
+            font-size: 1.4em;
+        }
+
+        a:active {
+            font-weight: bold;
+        }
+
     </style>
 </head>
 <body>
