--- a/Ejercicios-CSS/ej_cv.html
+++ b/Ejercicios-CSS/ej_cv.html
@@ -3,31 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>CV Agustina Aliciardi</title>
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet">
-    <style>
-        body{
-            text-align: center;
-            font-family: 'Gugi', cursive;
-        }
-        div{
-            border: 2px solid #1f1bff;
-            margin: 10px;
-            padding: 5px 30px;
-        }
-        img{
-            width: 50px;
-        }
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+    <link href="imagenes/favicon.png" rel="shortcut icon">
+    <link href="mi_estilo.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
 <div>
-    <img src="imagenes/icono_usuario.jpg">
+    <img alt="icono usuario" id="principal" src="imagenes/icono_usuario.jpg">
     <h1>Nombre Alumno</h1>
     <h2>Ing. en Computacion</h2>
 </div>
 
-<div>
+<div class="especial">
     <h3>Datos Personales</h3>
     <p><span>Fecha de Nacimiento:</span> dd/mm/aaaa</p>
     <p><span>Email:</span> email@email.com</p>
