Terminado JavaScript EJERCICIO-19: HOLA MUNDO!
Signed-off-by: Angelo Carlos Capello <ang_capello@outlook.com>

--- a/Ejercicios-JavaScript/primerWeb.html
+++ b/Ejercicios-JavaScript/primerWeb.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Conversor de Unidades</title>
     <link href="https://fonts.googleapis.com/css?family=Inknut+Antiqua" rel="stylesheet">
-    <link href="miEstilo.css" type="text/css" rel="stylesheet">
-    <script type="text/javascript" src="misFunciones.js"></script>
+    <link href="miEstilo.css" rel="stylesheet" type="text/css">
+    <script src="misFunciones.js" type="text/javascript"></script>
 </head>
 <body class="body-num" onload="alert('Hola Mundo!')">
 
@@ -15,7 +15,7 @@
         <p>
             <!--Label es incluido por cuestiones de Accesibilidad-->
             <!--Note que Label y el id del elemento poseen igual nombre-->
-            <label for="distancia"> Distancia</label> = <input id="distancia" type="text" name="inp_distancia">
+            <label for="distancia"> Distancia</label> = <input id="distancia" name="inp_distancia" type="text">
             <label>
                 <select name="unidades">
                     <option value="unid_metros">Metros</option>
