--- a/Ejercicios-JavaScript/ConversorUnidades.html
+++ b/Ejercicios-JavaScript/ConversorUnidades.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Conversor de Unidades</title>
     <link href="https://fonts.googleapis.com/css?family=Inknut+Antiqua" rel="stylesheet">
-    <link href="miEstilo.css" type="text/css" rel="stylesheet">
-    <script type="text/javascript" src="misFunciones.js"></script>
+    <link href="miEstilo.css" rel="stylesheet" type="text/css">
+    <script src="misFunciones.js" type="text/javascript"></script>
 </head>
 <body class="body-num">
 
