Terminado JavaScript EJERCICIO-24: OPERACIONES MATEMÁTICAS
Signed-off-by: Angelo Carlos Capello <ang_capello@outlook.com>

--- a/Ejercicios-JavaScript/operacionesMatematicas.html
+++ b/Ejercicios-JavaScript/operacionesMatematicas.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Operaciones Matemáticas</title>
     <link href="https://fonts.googleapis.com/css?family=Inknut+Antiqua" rel="stylesheet">
-    <link href="miEstilo.css" type="text/css" rel="stylesheet">
-    <script type="text/javascript" src="misFunciones.js"></script>
+    <link href="miEstilo.css" rel="stylesheet" type="text/css">
+    <script src="misFunciones.js" type="text/javascript"></script>
 </head>
 <body class="body-num">
 
@@ -13,32 +13,34 @@
     <h1>Operaciones Matemáticas</h1>
     <form class="operacionesMat">
         <p>
-            <input id="nums1" type="text" name="sum_num1">
+            <label for="nums1"></label><input id="nums1" name="sum_num1" onchange="calcularSuma()" type="text">
             +
-            <input id="nums2" type="text" name="sum_num2">
+            <label for="nums2"></label><input id="nums2" name="sum_num2" onchange="calcularSuma()" type="text">
             =
-            <input id="totalS" type="text" name="sum_total">
+            <label for="totalS"></label><input disabled id="totalS" name="sum_total" type="text">
         </p>
         <p>
-            <input id="numr1" type="text" name="res_num1">
+            <label for="numr1"></label><input id="numr1" name="res_num1" onchange="calcularResta()" type="text">
             -
-            <input id="numr2" type="text" name="res_num2">
+            <label for="numr2"></label><input id="numr2" name="res_num2" onchange="calcularResta()" type="text">
             =
-            <input id="totalR" type="text" name="res_total">
+            <label for="totalR"></label><input disabled id="totalR" name="res_total" type="text">
         </p>
         <p>
-            <input id="numm1" type="text" name="mul_num1">
+            <label for="numm1"></label><input id="numm1" name="mul_num1" onchange="calcularMultiplicacion()"
+                                              type="text">
             x
-            <input id="numm2" type="text" name="mul_num2">
+            <label for="numm2"></label><input id="numm2" name="mul_num2" onchange="calcularMultiplicacion()"
+                                              type="text">
             =
-            <input id="totalM" type="text" name="mul_total">
+            <label for="totalM"></label><input disabled id="totalM" name="mul_total" type="text">
         </p>
         <p>
-            <input id="numd1" type="text" name="div_num1">
+            <label for="numd1"></label><input id="numd1" name="div_num1" onchange="calcularDivision()" type="text">
             /
-            <input id="numd2" type="text" name="div_num2">
+            <label for="numd2"></label><input id="numd2" name="div_num2" onchange="calcularDivision()" type="text">
             =
-            <input id="totalD" type="text" name="div_total">
+            <label for="totalD"></label><input disabled id="totalD" name="div_total" type="text">
         </p>
     </form>
 </div>
