Terminado JavaScript EJERCICIO-25: OPERACIONES MATEMÁTICAS II
Signed-off-by: Angelo Carlos Capello <ang_capello@outlook.com>

--- a/Ejercicios-JavaScript/operacionesMatematicas.html
+++ b/Ejercicios-JavaScript/operacionesMatematicas.html
@@ -17,14 +17,14 @@
             +
             <label for="nums2"></label><input id="nums2" name="sum_num2" onchange="calcularSuma()" type="text">
             =
-            <label for="totalS"></label><input disabled id="totalS" name="sum_total" type="text">
+            <span class="sum_total" id="totalS"></span>
         </p>
         <p>
             <label for="numr1"></label><input id="numr1" name="res_num1" onchange="calcularResta()" type="text">
             -
             <label for="numr2"></label><input id="numr2" name="res_num2" onchange="calcularResta()" type="text">
             =
-            <label for="totalR"></label><input disabled id="totalR" name="res_total" type="text">
+            <span class="res_total" id="totalR"></span>
         </p>
         <p>
             <label for="numm1"></label><input id="numm1" name="mul_num1" onchange="calcularMultiplicacion()"
@@ -33,14 +33,14 @@
             <label for="numm2"></label><input id="numm2" name="mul_num2" onchange="calcularMultiplicacion()"
                                               type="text">
             =
-            <label for="totalM"></label><input disabled id="totalM" name="mul_total" type="text">
+            <span class="mul_total" id="totalM"></span>
         </p>
         <p>
             <label for="numd1"></label><input id="numd1" name="div_num1" onchange="calcularDivision()" type="text">
             /
             <label for="numd2"></label><input id="numd2" name="div_num2" onchange="calcularDivision()" type="text">
             =
-            <label for="totalD"></label><input disabled id="totalD" name="div_total" type="text">
+            <span class="div_total" id="totalD"></span>
         </p>
     </form>
 </div>
