--- a/Ejercicios-JavaScript/primerWeb.html
+++ b/Ejercicios-JavaScript/primerWeb.html
@@ -7,7 +7,7 @@
     <link href="miEstilo.css" rel="stylesheet" type="text/css">
     <script src="misFunciones.js" type="text/javascript"></script>
 </head>
-<body class="body-num" onload="alert('Hola Mundo!')">
+<body class="body-num">
 
 <div class="centrado div-conver">
     <h1>Conversor de Unidades</h1>
@@ -15,16 +15,16 @@
         <p>
             <!--Label es incluido por cuestiones de Accesibilidad-->
             <!--Note que Label y el id del elemento poseen igual nombre-->
-            <label for="distancia"> Distancia</label> = <input id="distancia" name="inp_distancia" type="text">
+            <label for="distancia"> Distancia</label> =<input id="distancia" name="inp_distancia" type="text">
             <label>
                 <select name="unidades">
-                    <option value="unid_metros">Metros</option>
-                    <option value="unid_yardas">Yardas</option>
-                    <option value="unid_pie">Pies</option>
-                    <option value="unid_pulgadas">Pulgadas</option>
+                    <option value="metros">Metros</option>
+                    <option value="yardas">Yardas</option>
+                    <option value="pie">Pies</option>
+                    <option value="pulgadas">Pulgadas</option>
                 </select>
             </label>
-            <button>
+            <button onclick="cargarWeb()">
                 Segunda Web!
             </button>
         </p>
