--- a/Ejercicios-JavaScript/segundaWeb.html
+++ b/Ejercicios-JavaScript/segundaWeb.html
@@ -7,14 +7,14 @@
     <link href="miEstilo.css" type="text/css" rel="stylesheet">
     <script type="text/javascript" src="misFunciones.js"></script>
 </head>
-<body class="body-num">
+<body class="body-num" onload="cargarResultado();">
 
 <div class="centrado div-conver">
     <h1>Conversor de Unidades</h1>
     <form>
         <p>
             La distancia ingresada es
-            <input id="dist" type="text" name="inp_dist" disabled>
+            <label for="dist"></label><input disabled id="dist" name="inp_dist" type="text">
         </p>
     </form>
 </div>
