--- a/Ejercicios-JavaScript/canvas_x-y.html
+++ b/Ejercicios-JavaScript/canvas_x-y.html
@@ -5,6 +5,7 @@
     <title>Canvas con Circulo y Cuadrado</title>
     <link href="https://fonts.googleapis.com/css?family=Inknut+Antiqua" rel="stylesheet">
     <link href="miEstilo.css" type="text/css" rel="stylesheet">
+    <script src="misFunciones.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -19,13 +20,13 @@
         <p>
             <label for="posicionY"> Y</label> = <input id="posicionY" type="text" name="inp_y">
         </p>
-        <button>
+        <button onclick="dibujarImagen(inp_x.value, inp_y.value)" type="button">
             Dibujar!
         </button>
     </form>
 </div>
 
-<canvas id="myCanvas" class="ejer">
+<canvas class="ejer" height="600px" id="myCanvas" width="1000px">
     Tu navegador no soporta el tag de HTML5 canvas.
 </canvas>
 
