--- a/Ejercicios-CSS/ej_instagram2.html
+++ b/Ejercicios-CSS/ej_instagram2.html
@@ -16,58 +16,48 @@
             integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <style>
-        @media (max-width: 600px) {
-            body {
-                column-count: 1;
-            }
-        }
-
-        @media (min-width: 601px) {
-            body {
-                column-count: 3;
-            }
-        }
-
         img {
             width: 100%;
+            height: 100%;
         }
     </style>
 </head>
 <body>
+<div class="contairner-fluid">
+    <div class="row">
+        <div class="col-md4 col-sm12">
+            <img alt="" src="imagenes/satoshito89_01.png">
+        </div>
+        <div class="col-md4 col-sm12">
+            <img alt="" src="imagenes/satoshito89_02.png">
+        </div>
+        <div class="col-md4 col-sm12">
+            <img alt="" src="imagenes/satoshito89_03.png">
+        </div>
+    </div>
 
-<div>
-    <div>
-        <img alt="" src="imagenes/satoshito89_01.png">
+    <div class="row">
+        <div class="col-md4 col-sm12">
+            <img alt="" src="imagenes/satoshito89_04.png">
+        </div>
+        <div class="col-md4 col-sm12">
+            <img alt="" src="imagenes/satoshito89_05.png">
+        </div>
+        <div class="col-md4 col-sm12">
+            <img alt="" src="imagenes/satoshito89_06.png">
+        </div>
     </div>
-    <div>
-        <img alt="" src="imagenes/satoshito89_02.png">
-    </div>
-    <div>
-        <img alt="" src="imagenes/satoshito89_03.png">
-    </div>
-</div>
 
-<div>
-    <div>
-        <img alt="" src="imagenes/satoshito89_04.png">
-    </div>
-    <div>
-        <img alt="" src="imagenes/satoshito89_05.png">
-    </div>
-    <div>
-        <img alt="" src="imagenes/satoshito89_06.png">
-    </div>
-</div>
-
-<div>
-    <div>
-        <img alt="" src="imagenes/satoshito89_07.png">
-    </div>
-    <div>
-        <img alt="" src="imagenes/satoshito89_08.png">
-    </div>
-    <div>
-        <img alt="" src="imagenes/satoshito89_09.png">
+    <div class="row">
+        <div class="col-md4 col-sm12">
+            <img alt="" src="imagenes/satoshito89_07.png">
+        </div>
+        <div class="col-md4 col-sm12">
+            <img alt="" src="imagenes/satoshito89_08.png">
+        </div>
+        <div class="col-md4 col-sm12">
+            <img alt="" src="imagenes/satoshito89_09.png">
+        </div>
     </div>
 </div>
 </body>
